# kdrive-backend

./: README.md  build.sh  package.json  pyproject.toml  render.yaml
common/: models.py
config/: authentication.py  settings.py  urls.py
directory_items/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
directory_items/migrations/: 0001_initial.py  0002_initial.py  0003_rename_source_url_directoryitem_image_url_and_more.py
image/: admin.py  models.py
image/migrations/: 0001_initial.py  0002_initial.py  0002_rename_createdat_image_created_at_and_more.py
images/: admin.py  image_classes.py  models.py  serializers.py  urls.py  views.py
images/migrations/: 0001_initial.py  0002_initial.py
server/config/: settings.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_name_alter_user_first_name_alter_user_last_name.py
