[tool.poetry]
name = "cloud-server"
version = "0.1.0"
description = ""
authors = ["keonoh00 <keonoh00@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cloud_server"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "~4.0"
djangorestframework = "^3.14.0"
pyjwt = "^2.6.0"
django-environ = "^0.9.0"
django-cors-headers = "^3.13.0"
requests = "^2.28.2"
paramiko = "^3.0.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
gunicorn = "^20.1.0"
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
